@@ -27,28 +27,31 @@ var locationLookup = false;
 var ASNLookup = false;
 
 const cdnboxStates = require('./cdnboxStates.js');
-cdnboxStates.loadconfig();
-
-if (cdnboxStates.config.tcprtt) {
-  try {
-    locationLookup = maxmind.openSync('./GeoLite2-City.mmdb');
-    console.error('TCPRTT: City GeoDatabase loaded.');
-    cdnboxStates.logconsole(' "type": "tcprtt", "error": "City GeoDatabase loaded."');
-  } catch (e) {
-    try {
-      locationLookup = maxmind.openSync('./GeoLite2-Country.mmdb');
-      console.error('TCPRTT: Country GeoDatabase loaded.');
-      cdnboxStates.logconsole(' "type": "tcprtt", "error": "Country GeoDatabase loaded."');
-    } catch (e) {
+cdnboxStates.loadconfig().then(
+  async function () {
+    if (cdnboxStates.config.tcprtt) {
+      try {
+        locationLookup = await maxmind.open('./GeoLite2-City.mmdb');
+        console.error('TCPRTT: City GeoDatabase loaded.');
+        cdnboxStates.logconsole(' "type": "tcprtt", "error": "City GeoDatabase loaded."');
+      } catch (e) {
+        try {
+          locationLookup = await maxmind.open('./GeoLite2-Country.mmdb');
+          console.error('TCPRTT: Country GeoDatabase loaded.');
+          cdnboxStates.logconsole(' "type": "tcprtt", "error": "Country GeoDatabase loaded."');
+        } catch (e) {
+          cdnboxStates.logconsole(' "type": "error", "error": "' + e + '"');
+        }
+      }
+      try {
+        ASNLookup = await maxmind.open('./GeoLite2-ASN.mmdb');
+        console.error('TCPRTT: ASN GeoDatabase loaded.');
+        cdnboxStates.logconsole(' "type": "tcprtt", "error": "ASN GeoDatabase loaded."');
+      } catch (e) {
+        cdnboxStates.logconsole(' "type": "error", "error": "' + e + '"');
+      }
     }
-  }
-  try {
-    ASNLookup = maxmind.openSync('./GeoLite2-ASN.mmdb');
-    console.error('TCPRTT: ASN GeoDatabase loaded.');
-    cdnboxStates.logconsole(' "type": "tcprtt", "error": "ASN GeoDatabase loaded."');
-  } catch (e) {
-  }
-}
+  });
 
 var intervals = {};
 var maxinterval = 10000;
