@@ -56,8 +56,9 @@ function choose(reqname, country, shortname) {
         (appcdnbox.continents !== undefined && appcdnbox.countries === undefined)) {
       if (country !== null && country.continent &&
           continents.indexOf(country.continent.code) == -1) continue;
-    } else if (countries != "ALL" && country !== null && country.country &&
-               countries.indexOf(country.country.iso_code) == -1) {
+    } else if (countries != "ALL" && country !== null && 
+	       country.country && countries.indexOf(country.country.iso_code) == -1 &&
+	       country.continent && continents.indexOf(country.continent.code) == -1) {
       continue;
     }
   
